# subsplash-sync

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  CMakePresets.json  README.md  buildspec.json  installer.iss.in
.github/scripts/: Package-Windows.ps1  package-ubuntu
.github/scripts/utils.zsh/: setup_ubuntu
.github/workflows/: build-project.yaml
cmake/common/: bootstrap.cmake
cmake/linux/: defaults.cmake
cmake/macos/: helpers.cmake
cmake/macos/resources/: distribution.in
data/locale/: en-US.ini
src/: compat-atomics.h  credential-store.cpp  credential-store.hpp  plugin-main.cpp  plugin-support.c.in  scheduler-panel.cpp  scheduler-panel.hpp  scheduler.c  scheduler.h  subsplash-api.c  subsplash-api.h
tests/: CMakeLists.txt  test-scheduler.c  test-subsplash-api.c
tests/stubs/: curl-stubs.c  obs-module.h  obs-stubs.c
tests/stubs/curl/: curl.h
